@@ -4,6 +4,7 @@ Phoronix Test Suite (Git)
 
 pts-core: Inline display of result distributions from OpenBenchmarking.org on applicable results
 pts-core: Don't try to run tests from result file or suite that were not installed
+phodevi: Better reporting of NVMe drive strings on BSDs
 
 Phoronix Test Suite 8.6.0 Milestone 2
 19 January 2019
